--- a/CCM_New/Client/Pages/Claims/ClaimListComponent.razor
+++ b/CCM_New/Client/Pages/Claims/ClaimListComponent.razor
@@ -36,6 +36,7 @@
                             }
                         </Template>
                     </GridColumn>
+                    <GridColumn Field=@nameof(TblComplaints.Status) HeaderText="Status" TextAlign="TextAlign.Left" Width="10"></GridColumn>
                     <GridColumn Field=@nameof(TblComplaints.ComplaintIduf) HeaderText="Complain nr" TextAlign="TextAlign.Left" Width="80"></GridColumn>
                     <GridColumn Field=@nameof(TblComplaints.DeliveryDate) HeaderText="Date" TextAlign="TextAlign.Left" Width="60"></GridColumn>
                     <GridColumn Field=@nameof(TblComplaints.ShiptoCustomerNumber) HeaderText="Customer nr" TextAlign="TextAlign.Left" Width="60"></GridColumn>
