--- a/CCM_New/Client/Shared/NavMenu.razor
+++ b/CCM_New/Client/Shared/NavMenu.razor
@@ -1,12 +1,14 @@
 ﻿@using Syncfusion.Blazor.Buttons;
+@inject LoginService loginService;
 
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">CCM </a>
-        <button class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <button class="navbar-toggler" @onclick="ToggleNavMenu">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-    
+</div>
+<div>
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
