--- a/CCM_New/Client/_Imports.razor
+++ b/CCM_New/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Calendars
 @using Syncfusion.Blazor.Layouts
+@using Syncfusion.Blazor.Notifications
