--- a/CCM_New/Client/Shared/NavMenu.razor
+++ b/CCM_New/Client/Shared/NavMenu.razor
@@ -1,5 +1,6 @@
 ﻿@using Syncfusion.Blazor.Buttons;
 @inject LoginService loginService;
+@using Syncfusion.Blazor.Notifications
 
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">CCM </a>
@@ -19,22 +20,26 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" @onclick="()=>expandSubNavCCM = !expandSubNavCCM">
+            <NavLink class="nav-link" @onclick="NavClaim">
                 <span class="oi oi-plus" aria-hidden="true"></span> CCM
             </NavLink>
             @if (expandSubNavCCM)
             {
-                <NavLink class="nav-link" href="NewClaimPage" style="margin-left: 15px">
+
+                <NavLink class="nav-link" href="NewClaimPage" style="margin-left: 15px" >
                     <span class="oi oi-medical-cross" aria-hidden="true" style="align-self"></span> New Claim
                 </NavLink>
+            }
+            @if (expandSubNavCCMList)
+            {
                 <NavLink class="nav-link" href="ClaimListPage" style="margin-left: 15px">
                     <span class="oi oi-list" aria-hidden="true" style="align-self"></span> Claim list
                 </NavLink>
+                }
             }
         </li>
         <li class="nav-item px-3">
-
-            <NavLink class="nav-link" @onclick="()=>expandSubNavDictionary = !expandSubNavDictionary">
+            <NavLink class="nav-link" @onclick="NavDictionary">
                 <span class="oi oi-menu" aria-hidden="true"></span> Dictionary
             </NavLink>
             @if (expandSubNavDictionary)
@@ -63,24 +68,123 @@
                 <NavLink class="nav-link" href="ForTestingPurpose" style="margin-left: 15px">
                     <span class="oi oi-spreadsheet" aria-hidden="true" style="align-self"></span> Test
                 </NavLink>
-
-              
             }
-
         </li>
     </ul>
 </div>
+
+
+<SfToast @ref="ToastObj"  Title="Access denide" Content="Not enough privilage ">
+    <ToastPosition X="Right"></ToastPosition>
+</SfToast>
 
 @code {
     private bool collapseNavMenu = true;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-    private bool expandSubNavDictionary;
-    private bool expandSubNavCCM;
+    public bool expandSubNavDictionary= false;
+    public bool expandSubNavCCM = false;
+    private bool grantVerificationIssueClaim = false;
+    public bool expandSubNavCCMList = false;
+    SfToast ToastObj;
+    public string ToastMessageTxT = "";
+
+
+    private void NavClaim()
+    {
+
+        if (loginService.securityLevel >= 10)
+        {
+            expandSubNavCCM = !expandSubNavCCM;
+        }
+      
+        
+
+        if (loginService.securityLevel >= 20)
+        {
+            expandSubNavCCMList = !expandSubNavCCMList;
+        }
+  
+    }
+
+
+    private void NavDictionary()
+    {
+
+        if (loginService.securityLevel == 100)
+        {
+            expandSubNavDictionary = !expandSubNavDictionary;
+        }
+        else
+        {
+
+            ToastMessageTxT = "No enough priviladges ";
+            ToastObj.Show();
+        }
+    }
 
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
     }
 
+    protected override async Task OnInitializedAsync()
+    {
+
+    }
+
 }
+
+<style>
+    #elementToastTime .e-toast-message {
+        padding: 10px;
+        text-align: center;
+    }
+
+    .e-toast-container .e-toast {
+        background-color: #caedcc;
+    }
+
+    #dialog.e-dialog .e-dlg-header-content .e-dlg-header {
+        text-align: center;
+        width: 100%;
+        color: #333;
+        font-weight: bold;
+        font-size: 20px;
+ 
+    }
+
+    #input-container .e-float-input { /* csslint allow: adjoining-classes */
+        margin: 17px 0;
+    }
+
+    .e-footer-content {
+        padding: 20px 0 0;
+        width: 100%;
+    }
+
+    .e-dialog .e-footer-content .e-btn {
+        width: 100%;
+        height: 36px;
+    }
+
+    #heading {
+        color: #333;
+        font-weight: bold;
+        margin: 0 0 15px;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    #dialog.e-dialog .e-footer-content {
+        padding: 0 18px 18px;
+    }
+
+        #dialog.e-dialog .e-footer-content .e-btn {
+            margin-left: 0;
+        }
+
+    .error-container {
+        color: red;
+    }
+</style>
